; ModuleID = '/home/carl/AnghaBench/redis/deps/lua/src/extr_lua_cmsgpack.c_mp_encode_lua_table_as_map.c'
source_filename = "/home/carl/AnghaBench/redis/deps/lua/src/extr_lua_cmsgpack.c_mp_encode_lua_table_as_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [39 x i8] c"in function mp_encode_lua_table_as_map\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_encode_lua_table_as_map(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  store i64 0, i64* %7, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @luaL_checkstack(i32* %8, i32 3, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @lua_pushnil(i32* %10)
  br label %12

12:                                               ; preds = %16, %3
  %13 = load i32*, i32** %4, align 8
  %14 = call i64 @lua_next(i32* %13, i32 -2)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %12
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @lua_pop(i32* %17, i32 1)
  %19 = load i64, i64* %7, align 8
  %20 = add i64 %19, 1
  store i64 %20, i64* %7, align 8
  br label %12

21:                                               ; preds = %12
  %22 = load i32*, i32** %4, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = load i64, i64* %7, align 8
  %25 = call i32 @mp_encode_map(i32* %22, i32* %23, i64 %24)
  %26 = load i32*, i32** %4, align 8
  %27 = call i32 @lua_pushnil(i32* %26)
  br label %28

28:                                               ; preds = %32, %21
  %29 = load i32*, i32** %4, align 8
  %30 = call i64 @lua_next(i32* %29, i32 -2)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %45

32:                                               ; preds = %28
  %33 = load i32*, i32** %4, align 8
  %34 = call i32 @lua_pushvalue(i32* %33, i32 -2)
  %35 = load i32*, i32** %4, align 8
  %36 = load i32*, i32** %5, align 8
  %37 = load i32, i32* %6, align 4
  %38 = add nsw i32 %37, 1
  %39 = call i32 @mp_encode_lua_type(i32* %35, i32* %36, i32 %38)
  %40 = load i32*, i32** %4, align 8
  %41 = load i32*, i32** %5, align 8
  %42 = load i32, i32* %6, align 4
  %43 = add nsw i32 %42, 1
  %44 = call i32 @mp_encode_lua_type(i32* %40, i32* %41, i32 %43)
  br label %28

45:                                               ; preds = %28
  ret void
}

declare dso_local i32 @luaL_checkstack(i32*, i32, i8*) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i64 @lua_next(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i32 @mp_encode_map(i32*, i32*, i64) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @mp_encode_lua_type(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
